Updates to actually use my tables.

--- a/Mastery Grader.ipynb
+++ b/Mastery Grader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,28 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<table class='paleGrayRows'> <thead> <tr> \n",
-      "<th>Letter Grade</th> \n",
-      "<th>Core Learning Targets</th> \n",
-      "<th>Supplemental Targets</th> </tr> \n",
-      "</thead> \n",
-      "<tbody> \n",
-      "<tr> <td>A</td> <td>Master 10 </td> <td>Master 7, Proficient 6</td> </tr> \n",
-      "<tr> <td>B</td> <td>Master 7, Proficient 3</td>Master 5, Proficient 8 <td></td> </tr> \n",
-      "<tr> <td>C</td> <td>Master 5, Proficient 5</td> <td>Master 5, Proficient 5</td> </tr> \n",
-      "<tr> <td>D</td> <td>Proficient 5</td> <td>Proficient 7</td> </tr> \n",
-      "<tr> <td>F</td> <td>Proficient &lt; 5</td> <td>----</td> </tr> \n",
-      "</tbody> </table>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "midterm_243 = (\"(12.1-12.4 Chapter 6, Chapter 7, 8.1, 8.2)\", \n",
     "               20, 80,  #A \n",
@@ -79,6 +60,7 @@
     "               32, 6, 60, #C\n",
     "               28, 50,  #D\n",
     "               28, 50) #F\n",
+    "\n",
     "\n",
     "midterm_321 = ( 5, 3, 2, #A \n",
     "               4, 1, 2, 2, #B\n",
@@ -119,46 +101,30 @@
     "<tr> <td>F</td> <td>Proficient &lt; %d</td> <td>----</td> </tr> \n",
     "</tbody> </table>\"\"\"\n",
     "\n",
-    "print(discrete_threshold_table % final_321)\n",
+    "# print(discrete_threshold_table % final_321)\n",
     "\n",
-    "midterm = { \"A\": {\"Points\": 19, \"Below G\": 0, \"WebAssign\": 80},\n",
-    "           \"B\": {\"Points\": 17, \"Below G\": 2, \"WebAssign\": 70},\n",
-    "           \"C\": {\"Points\": 13, \"Below G\": 4, \"WebAssign\": 60},\n",
-    "           \"D\": {\"Points\": 11, \"Below G\": 1000, \"WebAssign\": 50},  \n",
-    "           \"F\": {\"Points\": 0, \"Below G\": 1000, \"WebAssign\": 0}\n",
+    "def decide_letter_grade(individual):\n",
+    "    print(threshold_table)\n",
+    "    threshold = { \"A\": {\"Points\": threshold_table[1], \"Below P\": 0, \"WebAssign\": threshold_table[2]},\n",
+    "           \"B\": {\"Points\": threshold_table[3], \"Below P\": threshold_table[4], \"WebAssign\": threshold_table[5]},\n",
+    "           \"C\": {\"Points\": threshold_table[6], \"Below P\": threshold_table[7], \"WebAssign\": threshold_table[8]},\n",
+    "           \"D\": {\"Points\": threshold_table[9], \"Below P\": 1000, \"WebAssign\": threshold_table[10]},  \n",
+    "           \"F\": {\"Points\": threshold_table[11], \"Below P\": 1000, \"WebAssign\": 0}\n",
     "           # yes, I'm using 1000 as a threshold. I'm a teacher, not a programmer...\n",
     "          }\n",
-    "\n",
-    "## This is really dumb. I should do this differently. Want to suggest a better way? (After you've studied for your calculus test!)\n",
-    "def decide_letter_grade(midterm_or_final, individual):\n",
-    "    if midterm_or_final == \"Midterm\":\n",
-    "        if individual.Marks.Score >= midterm['A'][\"Points\"] and individual.Marks.NumberOfNs <= midterm[\"A\"][\"Below G\"] and individual.WebAssign >= midterm[\"A\"][\"WebAssign\"]:\n",
-    "            return \"A\"\n",
-    "        elif individual.Marks.Score >= midterm['B'][\"Points\"] and individual.Marks.NumberOfNs <= midterm[\"B\"][\"Below G\"] and individual.WebAssign >= midterm[\"B\"][\"WebAssign\"]:\n",
-    "            return \"B\"\n",
-    "        elif individual.Marks.Score >= midterm['C'][\"Points\"] and individual.Marks.NumberOfNs <= midterm[\"C\"][\"Below G\"] and individual.WebAssign >= midterm[\"C\"][\"WebAssign\"]:\n",
-    "            return \"C\"\n",
-    "        elif individual.Marks.Score >= midterm['D'][\"Points\"] and individual.Marks.NumberOfNs <= midterm[\"D\"][\"Below G\"] and individual.WebAssign >= midterm[\"D\"][\"WebAssign\"]:\n",
-    "            return \"D\"\n",
-    "        elif individual.Marks.Score >= midterm['F'][\"Points\"] and individual.Marks.NumberOfNs <= midterm[\"F\"][\"Below G\"] and individual.WebAssign >= midterm[\"F\"][\"WebAssign\"]:\n",
-    "            return \"F\"\n",
-    "        else:\n",
-    "            return \"None of the above?!?\"\n",
-    "    elif midterm_or_final == \"Final\":\n",
-    "        if individual.Marks.Score >= final['A'][\"Points\"] and individual.Marks.NumberOfNs <= final[\"A\"][\"Below G\"] and individual.WebAssign >= final[\"A\"][\"WebAssign\"]:\n",
-    "            return \"A\"\n",
-    "        elif individual.Marks.Score >= final['B'][\"Points\"] and individual.Marks.NumberOfNs <= final[\"B\"][\"Below G\"] and individual.WebAssign >= final[\"B\"][\"WebAssign\"]:\n",
-    "            return \"B\"\n",
-    "        elif individual.Marks.Score >= final['C'][\"Points\"] and individual.Marks.NumberOfNs <= final[\"C\"][\"Below G\"] and individual.WebAssign >= final[\"C\"][\"WebAssign\"]:\n",
-    "            return \"C\"\n",
-    "        elif individual.Marks.Score >= final['D'][\"Points\"] and individual.Marks.NumberOfNs <= final[\"D\"][\"Below G\"] and individual.WebAssign >= final[\"D\"][\"WebAssign\"]:\n",
-    "            return \"D\"\n",
-    "        elif individual.Marks.Score >= final['F'][\"Points\"] and individual.Marks.NumberOfNs <= final[\"F\"][\"Below G\"] and individual.WebAssign >= final[\"F\"][\"WebAssign\"]:\n",
-    "            return \"F\"\n",
-    "        else:\n",
-    "            return \"None of the above?!?\"\n",
+    "    \n",
+    "    if individual.Marks.Score >= threshold['A'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"A\"][\"Below P\"] and individual.WebAssign >= threshold[\"A\"][\"WebAssign\"]:\n",
+    "        return \"A\"\n",
+    "    elif individual.Marks.Score >= threshold['B'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"B\"][\"Below P\"] and individual.WebAssign >= threshold[\"B\"][\"WebAssign\"]:\n",
+    "        return \"B\"\n",
+    "    elif individual.Marks.Score >= threshold['C'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"C\"][\"Below P\"] and individual.WebAssign >= threshold[\"C\"][\"WebAssign\"]:\n",
+    "        return \"C\"\n",
+    "    elif individual.Marks.Score >= threshold['D'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"D\"][\"Below P\"] and individual.WebAssign >= threshold[\"D\"][\"WebAssign\"]:\n",
+    "        return \"D\"\n",
+    "    elif individual.Marks.Score >= threshold['F'][\"Points\"] and individual.Marks.NumberOfNs <= threshold[\"F\"][\"Below P\"] and individual.WebAssign >= threshold[\"F\"][\"WebAssign\"]:\n",
+    "        return \"F\"\n",
     "    else:\n",
-    "        raise ValueError(\"What are you doing? Midterm or Final. That's it, man\")\n"
+    "        return \"None of the above?!?\"\n"
    ]
   },
   {
@@ -170,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,10 +154,10 @@
     "        \"score\": individual.Marks.Score,\n",
     "        \"number_of_ns\": individual.Marks.NumberOfNs,\n",
     "        \"webassign_grade\": individual.WebAssign,\n",
-    "        \"letter_grade\": decide_letter_grade(midtermOrFinal, individual),\n",
+    "        \"letter_grade\": decide_letter_grade(individual),\n",
     "        \"date\": today,\n",
     "        \"midterm_or_final\": midtermOrFinal,\n",
-    "        \"grade_threshold\": midterm_threshold if midtermOrFinal==\"Midterm\" else final_threshold,\n",
+    "        \"grade_threshold\": threshold_html_table,\n",
     "        \"extra_text\": extra_text if extra_text else \"\"\n",
     "    }\n",
     "\n",
@@ -215,13 +181,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"math243_testdata.csv\"\n",
+    "filename_change_if_youre_testing = \"math242_testdata.csv\" if course==\"math242\" else \"math243_testdata.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "\n",
@@ -251,7 +217,7 @@
     "                       'C1 Core', 'C2 Core', 'C3', 'C4']\n",
     "\n",
     "\n",
-    "better_cols = math243_better_cols\n",
+    "better_cols = math242_better_cols if course==\"math242\" else math243_better_cols\n",
     "\n",
     "df.columns = better_cols\n",
     "\n",
@@ -272,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,30 +296,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Individual(Name='Ammerman, Jeffrey', Marks=Marks(Score=21, NumberOfNs=1), WebAssign=73.46, RawData=     Standard  Marks\n",
-      "0          V1     PM\n",
-      "1          V2     PM\n",
-      "2          V3     PM\n",
-      "3          V4     PM\n",
-      "5          F1     PM\n",
-      "6          F2     PM\n",
-      "7          F3     PM\n",
-      "8          F4     PM\n",
-      "9        INT1     PM\n",
-      "10       INT2     PM\n",
-      "11       INT3      N\n",
-      "12       INT4      P\n",
-      "29  WebAssign  73.46)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # temporary stuff:\n",
     "# midtermOrFinal = \"Final\"\n",
@@ -366,8 +311,15 @@
     "\n",
     "midtermOrFinal = \"Midterm\"\n",
     "\n",
-    "midterm_threshold = calculus_threshold_table % midterm_243\n",
-    "print_the_report_for(class_scores[5])"
+    "\n",
+    "course = \"math242\"  #math242 or math243 as a string\n",
+    "# I'm an idiot an still have this midterm vs final; oh well\n",
+    "threshold_table = midterm_242 if course==\"math242\" else math_243\n",
+    "\n",
+    "\n",
+    "threshold_html_table = calculus_threshold_table % threshold_table\n",
+    "#for individual in class_scores:\n",
+    "print_the_report_for(class_scores[29])"
    ]
   },
   {
