Correct the grade decider and the html templates.

--- a/321 Mastery Grading (Core Targets).ipynb
+++ b/321 Mastery Grading (Core Targets).ipynb
@@ -82,6 +82,10 @@
     "coredf.fillna(0, inplace=True)\n",
     "supplementaldf.fillna(0, inplace=True)\n",
     "\n",
+    "coredf.drop(\"N\", axis=1, inplace=True)\n",
+    "supplementaldf.drop(\"N\", axis=1, inplace=True)\n",
+    "\n",
+    "\n",
     "# I truly have no idea why \"Name\" isn't a common index, but I need to specify it.\n",
     "df = pd.merge(df, coredf, left_on=\"Name\", right_on=\"Name\", how=\"inner\")\n",
     "df = pd.merge(df, supplementaldf, left_on=\"Name\", right_on=\"Name\", how=\"inner\")"
@@ -108,16 +112,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class_scores = list()\n",
     "for index, row in df.iterrows():\n",
     "    coreMarks = DiscreteMarks(row[\"Core Mastered\"],\n",
-    "                              row[\"Core Proficient\"])\n",
+    "                              row[\"Core Proficient\"] + row[\"Core Mastered\"])\n",
     "    supplementMarks = DiscreteMarks(row[\"Supplemental Mastered\"], \n",
-    "                                    row[\"Supplemental Proficient\"])\n",
+    "                                    row[\"Supplemental Proficient\"] + row[\"Supplemental Mastered\"])\n",
     "\n",
     "    row = row.drop([\"Core Mastered\", \"Core Proficient\", \"Supplemental Mastered\", \"Supplemental Proficient\"])\n",
     "    raw = pd.DataFrame({'Standard':row.index, 'Marks':row.values})\n",
@@ -131,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +160,7 @@
     "</thead> \n",
     "<tbody> \n",
     "<tr> <td>A</td> <td>Master %d </td> <td>Master %d, Proficient %d</td> </tr> \n",
-    "<tr> <td>B</td> <td>Master %d, Proficient %d</td>Master %d, Proficient %d <td></td> </tr> \n",
+    "<tr> <td>B</td> <td>Master %d, Proficient %d</td><td>Master %d, Proficient %d</td> </tr> \n",
     "<tr> <td>C</td> <td>Master %d, Proficient %d</td> <td>Master %d, Proficient %d</td> </tr> \n",
     "<tr> <td>D</td> <td>Proficient %d</td> <td>Proficient %d</td> </tr> \n",
     "<tr> <td>F</td> <td>Proficient &lt; %d</td> <td>----</td> </tr> \n",
@@ -182,15 +186,15 @@
     "                     \"Supplemental Mastered\": 0, \"Supplemental Proficient\": 0},\n",
     "          }\n",
     "    \n",
-    "    if individual.CoreMarks.Mastered >= threshold['A'][\"Core Mastered\"] and individual.CoreMarks.Proficient >= threshold[\"A\"][\"Core Proficient\"] and individual.SupplementMarks.Mastered >= threshold['A'][\"Supplemental Mastered\"] and individual.SupplementMarks.Proficient <= threshold[\"A\"][\"Supplemental Proficient\"]:\n",
+    "    if individual.CoreMarks.Mastered >= threshold['A'][\"Core Mastered\"] and individual.CoreMarks.Proficient >= threshold[\"A\"][\"Core Proficient\"] and individual.SupplementMarks.Mastered >= threshold['A'][\"Supplemental Mastered\"] and individual.SupplementMarks.Proficient >= threshold[\"A\"][\"Supplemental Proficient\"]:\n",
     "        return \"A\"\n",
     "    elif individual.CoreMarks.Mastered >= threshold['B'][\"Core Mastered\"] and individual.CoreMarks.Proficient >= threshold[\"B\"][\"Core Proficient\"] and individual.SupplementMarks.Mastered >= threshold['B'][\"Supplemental Mastered\"] and individual.SupplementMarks.Proficient >= threshold[\"B\"][\"Supplemental Proficient\"]:\n",
     "        return \"B\"\n",
-    "    elif individual.CoreMarks.Mastered >= threshold['C'][\"Core Mastered\"] and individual.CoreMarks.Proficient <= threshold[\"C\"][\"Core Proficient\"] and individual.SupplementMarks.Mastered >= threshold['C'][\"Supplemental Mastered\"] and individual.SupplementMarks.Proficient <= threshold[\"C\"][\"Supplemental Proficient\"]:\n",
+    "    elif individual.CoreMarks.Mastered >= threshold['C'][\"Core Mastered\"] and individual.CoreMarks.Proficient >= threshold[\"C\"][\"Core Proficient\"] and individual.SupplementMarks.Mastered >= threshold['C'][\"Supplemental Mastered\"] and individual.SupplementMarks.Proficient >= threshold[\"C\"][\"Supplemental Proficient\"]:\n",
     "        return \"C\"\n",
-    "    elif individual.CoreMarks.Mastered >= threshold['D'][\"Core Mastered\"] and individual.CoreMarks.Proficient <= threshold[\"D\"][\"Core Proficient\"] and individual.SupplementMarks.Mastered >= threshold['D'][\"Supplemental Mastered\"] and individual.SupplementMarks.Proficient <= threshold[\"D\"][\"Supplemental Proficient\"]:\n",
+    "    elif individual.CoreMarks.Mastered >= threshold['D'][\"Core Mastered\"] and individual.CoreMarks.Proficient >= threshold[\"D\"][\"Core Proficient\"] and individual.SupplementMarks.Mastered >= threshold['D'][\"Supplemental Mastered\"] and individual.SupplementMarks.Proficient >= threshold[\"D\"][\"Supplemental Proficient\"]:\n",
     "        return \"D\"\n",
-    "    elif individual.CoreMarks.Mastered >= threshold['F'][\"Core Mastered\"] and individual.CoreMarks.Proficient <= threshold[\"F\"][\"Core Proficient\"] and individual.SupplementMarks.Mastered >= threshold['F'][\"Supplemental Mastered\"] and individual.SupplementMarks.Proficient <= threshold[\"F\"][\"Supplemental Proficient\"]:\n",
+    "    elif individual.SupplementMarks.Mastered + individual.SupplementMarks.Proficient >= threshold[\"F\"][\"Supplemental Proficient\"]:\n",
     "        return \"F\"\n",
     "    else:\n",
     "        return \"None of the above?!?\""
@@ -224,6 +228,7 @@
     "        \"grade_threshold\": threshold_html_table,\n",
     "        \"extra_text\": extra_text if extra_text else \"\"\n",
     "    }\n",
+    "  \n",
     "    output = template.render(template_vars)\n",
     "    HTML(string=output).write_pdf(\"./reports/\"+individual.Name+\".pdf\",stylesheets=[\"./report.css\"])\n",
     "   "
@@ -231,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +250,9 @@
     "for student in class_scores:\n",
     "    print_the_report_for(student)\n",
     "\n",
-    "#print(threshold_html_table)"
+    "#print(threshold_html_table)\n",
+    "\n",
+    "#print_the_report_for(class_scores[5])"
    ]
   }
  ],
