Corrected columns, code execution.

--- a/Mastery Grader.ipynb
+++ b/Mastery Grader.ipynb
@@ -187,7 +187,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"math242_testdata.csv\" if course==\"math242\" else \"math243_testdata.csv\"\n",
+    "filename_change_if_youre_testing = \"lastweek242.csv\" if course==\"math242\" else \"lastweek243.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "\n",
@@ -204,17 +204,11 @@
     "               'F1', 'F2',\n",
     "               'L1', 'L2', \n",
     "               'D1', 'D2', \n",
-    "                       'DC1', 'DC2', 'DC3,', 'DC4', 'DC5',\n",
-    "                       'DA1', 'DA2', 'DA2', 'DA3', 'DA4', 'DA5', 'DA6',\n",
+    "                       'DC1', 'DC2', 'DC3', 'DC4', 'DC5',\n",
+    "                       'DA1', 'DA2', 'DA3', 'DA4', 'DA5', 'DA6',\n",
     "                       'INT1', 'INT2', 'INT3', 'INT4', 'INT5', \n",
-    "               'IA1', 'IA2', 'IA3', 'IA4'\n",
+    "               'IA1', 'IA2', 'IA3', 'IA4',\n",
     "               'IF1', 'IF2', 'WebAssign']\n",
-    "math321_better_cols = ['Last Name', 'First Name', 'Username', 'Student ID', 'Last Access', 'Availability', \n",
-    "                       'O1', 'O2 Core', 'O3', 'O4 Core', 'O5',\n",
-    "                       'L1 Core', 'L2', 'L3', 'L4', 'L5 Core',\n",
-    "                       'N1 Core', 'N2 Core', 'N3', 'N4', 'N5', 'N6',\n",
-    "                       'R1 Core', 'R2', 'R3', 'R4 Core',\n",
-    "                       'C1 Core', 'C2 Core', 'C3', 'C4']\n",
     "\n",
     "\n",
     "better_cols = math242_better_cols if course==\"math242\" else math243_better_cols\n",
@@ -296,42 +290,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'midterm_242' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-1710d7b77371>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mcourse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"math242\"\u001b[0m  \u001b[0;31m#math242 or math243 as a string\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;31m# I'm an idiot an still have this midterm vs final; oh well\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mthreshold_table\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmidterm_242\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mcourse\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m\"math242\"\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mmath_243\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'midterm_242' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # temporary stuff:\n",
     "# midtermOrFinal = \"Final\"\n",
     "# #extra_text = \"<h2>Final course grade</h2>\"\n",
-    "# #extra_text = \"<h2>Last week before final</h2><p> <b>Note:</b> this is prepared the week before the final. There is still one more quiz on one standard; you can get up to 2 points (two S's) or as low as 2 additional N's. Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still time to reassess - break week, last week of classes, and during finals week. Additionally, the final exam will cover the second half material. </p> <p>Happy with your grade? Do well on the last quiz and you can skip the final.</p>\"\n",
-    "extra_text = \"The webassign grade was based on score of all assignments that were due before March 13. Work between March 14 and the present is not reflected on this report<br/><br/>\"\n",
+    "#extra_text_242 = \"<h2>Last week before final</h2><p> <b>Note:</b> this is prepared the week before the final.  Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 14 and during the finals week. <p>Happy with your grade? High five 🙌. You're done 🎉.</p>\"\n",
+    "\n",
+    "## for 243:\n",
+    "extra_text = \"<h2>Last week before final</h2><p> <b>Note:</b> this is prepared the week before the final.  Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 14 and during the finals week. <p>Happy with your grade? High five 🙌. You're almost done... Finish Checkpoint 14 with V5 and you're done!  🎉 </p>\"\n",
+    "#extra_text = \"The webassign grade was based on score of all assignments that were due before March 13. Work between March 14 and the present is not reflected on this report<br/><br/>\"\n",
     "\n",
     "# for individual in class_scores: \n",
     "#     print_the_report_for(individual)\n",
     "\n",
-    "midtermOrFinal = \"Midterm\"\n",
+    "midtermOrFinal = \"Final\"\n",
     "\n",
     "\n",
     "course = \"math242\"  #math242 or math243 as a string\n",
     "# I'm an idiot an still have this midterm vs final; oh well\n",
-    "threshold_table = midterm_242 if course==\"math242\" else math_243\n",
+    "threshold_table = final_242 if course==\"math242\" else final_243\n",
     "\n",
     "\n",
-    "threshold_html_table = calculus_threshold_table % threshold_table\n",
+    "threshold_html_table = calculus_threshold_table % threshold_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "#for individual in class_scores:\n",
-    "print_the_report_for(class_scores[29])"
+    "for score in class_scores: \n",
+    "    print_the_report_for(score)"
    ]
   }
  ],
@@ -351,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
