--- a/321 Mastery Grading (Core Targets).ipynb
+++ b/321 Mastery Grading (Core Targets).ipynb
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"math321-testdata.csv\"\n",
+    "filename_change_if_youre_testing = \"lastweek321.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
     "</tbody> </table>\"\"\"\n",
     "\n",
     "# I'm an idiot an still have this midterm vs final; oh well\n",
-    "threshold_table = midterm_321 # ... hard coded :-(\n",
+    "threshold_table = final_321 # ... hard coded :-(\n",
     "\n",
     "\n",
     "\n",
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,8 +244,10 @@
     "threshold_html_table = discrete_threshold_table % threshold_table\n",
     "#for individual in class_scores:\n",
     "\n",
-    "midtermOrFinal = \"Midterm\"\n",
-    "extra_text = \"\"\n",
+    "midtermOrFinal = \"Final\"\n",
+    "extra_text = \"<h2>Last week before final</h2><p> <b>Note:</b> this is prepared the week before the final.  Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 14 and during the finals week. <p>Happy with your grade? High five 🙌. You're done 🎉.</p>\"\n",
+    "\n",
+    "\n",
     "\n",
     "for student in class_scores:\n",
     "    print_the_report_for(student)\n",
@@ -272,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
