--- a/321 Mastery Grading (Core Targets).ipynb
+++ b/321 Mastery Grading (Core Targets).ipynb
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"lastweek321.csv\"\n",
+    "filename_change_if_youre_testing = \"321FINALGRADES.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,11 +175,11 @@
     "\n",
     "def decide_letter_grade(individual):\n",
     "    threshold = {\"A\": {\"Core Mastered\": threshold_table[0], \"Core Proficient\": 0,\n",
-    "                     \"Supplemental Mastered\": threshold_table[1], \"Supplemental Proficient\": threshold_table[2]},\n",
-    "              \"B\": {\"Core Mastered\": threshold_table[3], \"Core Proficient\": threshold_table[4],\n",
-    "                     \"Supplemental Mastered\": threshold_table[5], \"Supplemental Proficient\": threshold_table[6]},\n",
+    "                     \"Supplemental Mastered\": threshold_table[1], \"Supplemental Proficient\": threshold_table[1]+threshold_table[2]-1},\n",
+    "              \"B\": {\"Core Mastered\": threshold_table[3], \"Core Proficient\": threshold_table[3]+threshold_table[4],\n",
+    "                     \"Supplemental Mastered\": threshold_table[5], \"Supplemental Proficient\": threshold_table[5]+threshold_table[6]-1},\n",
     "              \"C\": {\"Core Mastered\": threshold_table[7], \"Core Proficient\": threshold_table[8],\n",
-    "                     \"Supplemental Mastered\": threshold_table[9], \"Supplemental Proficient\": threshold_table[10]},\n",
+    "                     \"Supplemental Mastered\": threshold_table[9], \"Supplemental Proficient\": threshold_table[9]+threshold_table[10]-1},\n",
     "              \"D\": {\"Core Mastered\": 0, \"Core Proficient\": threshold_table[11],\n",
     "                     \"Supplemental Mastered\": 0, \"Supplemental Proficient\": threshold_table[12]},\n",
     "              \"F\": {\"Core Mastered\": 0, \"Core Proficient\": 0,\n",
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,8 +245,8 @@
     "#for individual in class_scores:\n",
     "\n",
     "midtermOrFinal = \"Final\"\n",
-    "extra_text = \"<h2>Last week before final</h2><p> <b>Note:</b> this is prepared the week before the final.  Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 14 and during the finals week. <p>Happy with your grade? High five 🙌. You're done 🎉.</p>\"\n",
-    "\n",
+    "#extra_text = \"<h2>Last week before final</h2><p> <b>Note:</b> this is prepared the week before the final.  Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 14 and during the finals week. <p>Happy with your grade? High five 🙌. You're done 🎉.</p>\"\n",
+    "extra_text = \"After checkpoint 15\"\n",
     "\n",
     "\n",
     "for student in class_scores:\n",
