--- a/Mastery Grader.ipynb
+++ b/Mastery Grader.ipynb
@@ -187,7 +187,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"lastweek242.csv\" if course==\"math242\" else \"lastweek243.csv\"\n",
+    "filename_change_if_youre_testing = \"242FINALGRADES.csv\" if course==\"math242\" else \"243FINALGRADES.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "\n",
@@ -300,8 +300,8 @@
     "#extra_text_242 = \"<h2>Last week before final</h2><p> <b>Note:</b> this is prepared the week before the final.  Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 14 and during the finals week. <p>Happy with your grade? High five 🙌. You're done 🎉.</p>\"\n",
     "\n",
     "## for 243:\n",
-    "extra_text = \"<h2>Last week before final</h2><p> <b>Note:</b> this is prepared the week before the final.  Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 14 and during the finals week. <p>Happy with your grade? High five 🙌. You're almost done... Finish Checkpoint 14 with V5 and you're done!  🎉 </p>\"\n",
     "#extra_text = \"The webassign grade was based on score of all assignments that were due before March 13. Work between March 14 and the present is not reflected on this report<br/><br/>\"\n",
+    "extra_text = \"Final grades after checkpoint 15 was completed.\"\n",
     "\n",
     "# for individual in class_scores: \n",
     "#     print_the_report_for(individual)\n",
@@ -309,7 +309,7 @@
     "midtermOrFinal = \"Final\"\n",
     "\n",
     "\n",
-    "course = \"math242\"  #math242 or math243 as a string\n",
+    "course = \"math243\"  #math242 or math243 as a string\n",
     "# I'm an idiot an still have this midterm vs final; oh well\n",
     "threshold_table = final_242 if course==\"math242\" else final_243\n",
     "\n",
@@ -325,6 +325,7 @@
    "source": [
     "\n",
     "#for individual in class_scores:\n",
+    "\n",
     "for score in class_scores: \n",
     "    print_the_report_for(score)"
    ]
