Updated grader for midterm scheme Fall 21\n\n midterm update on 321 and created new 144 data scheme.

--- a/321 Mastery Grading (Core Targets).ipynb
+++ b/321 Mastery Grading (Core Targets).ipynb
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"321FINALGRADES.csv\"\n",
+    "filename_change_if_youre_testing = \"test-fa21.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
     "\n",
@@ -63,11 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Aggregate and data into P and PM's \n",
+    "# Aggregate data into P and PM's \n",
     "countProficientAndMastered = lambda x: x.value_counts()\n",
     "\n",
     "coredf = df[core_cols].agg(countProficientAndMastered, axis=1)\n",
@@ -82,8 +82,8 @@
     "coredf.fillna(0, inplace=True)\n",
     "supplementaldf.fillna(0, inplace=True)\n",
     "\n",
-    "coredf.drop(\"N\", axis=1, inplace=True)\n",
-    "supplementaldf.drop(\"N\", axis=1, inplace=True)\n",
+    "#coredf.drop(\"N\", axis=1, inplace=True)\n",
+    "#supplementaldf.drop(\"N\", axis=1, inplace=True)\n",
     "\n",
     "\n",
     "# I truly have no idea why \"Name\" isn't a common index, but I need to specify it.\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,20 +135,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "midterm_321 = ( 5, 3, 2, #A \n",
-    "               4, 1, 2, 2, #B\n",
-    "               3, 2, 1, 3, #C\n",
-    "               3, 3, #D\n",
+    "midterm_321 = ( 5, 4, 4, #A \n",
+    "               4, 1, 2, 6, #B\n",
+    "               3, 2, 2, 4, #C\n",
+    "               3, 4, #D\n",
     "               3) #F\n",
     "\n",
-    "final_321 = ( 10, 7, 6, #A \n",
-    "               7, 3, 5, 8, #B\n",
-    "               5, 5, 5, 5, #C\n",
+    "final_321 = ( 10, 8, 6, #A \n",
+    "               7, 3, 6, 8, #B\n",
+    "               5, 5, 6, 6, #C\n",
     "               5, 7, #D\n",
     "               5) #F\n",
     "\n",
@@ -167,7 +167,7 @@
     "</tbody> </table>\"\"\"\n",
     "\n",
     "# I'm an idiot an still have this midterm vs final; oh well\n",
-    "threshold_table = final_321 # ... hard coded :-(\n",
+    "threshold_table = midterm_321 # ... hard coded :-(\n",
     "\n",
     "\n",
     "\n",
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,9 +244,10 @@
     "threshold_html_table = discrete_threshold_table % threshold_table\n",
     "#for individual in class_scores:\n",
     "\n",
-    "midtermOrFinal = \"Final\"\n",
+    "midtermOrFinal = \"Midterm\"\n",
+    "extra_text = \"This is a test run. Ignore these files...\"\n",
     "#extra_text = \"<h2>Last week before final</h2><p> <b>Note:</b> this is prepared the week before the final.  Note also the grade thresholds that must be met on the next page.</p> <p> Unhappy with your grade? There's still opportunities on Checkpoint 14 and during the finals week. <p>Happy with your grade? High five 🙌. You're done 🎉.</p>\"\n",
-    "extra_text = \"After checkpoint 15\"\n",
+    "#extra_text = \"After checkpoint 15\"\n",
     "\n",
     "\n",
     "for student in class_scores:\n",
@@ -260,7 +261,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -274,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
