--- a/Mastery Grader.ipynb
+++ b/Mastery Grader.ipynb
@@ -33,6 +33,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "midterm_144 = (\"Through 3.5\", \n",
+    "               21, 80,  #A \n",
+    "               19, 2, 70, #B\n",
+    "               16, 4, 60, #C\n",
+    "               14, 50,  #D\n",
+    "               14, 50) #F\n",
+    "\n",
+    "final_144 = (\"(all)\", \n",
+    "               48, 80,  #A \n",
+    "               40, 2, 70, #B\n",
+    "               34, 6, 60, #C\n",
+    "               30, 50,  #D\n",
+    "               30, 50) #F\n",
+    "\n",
     "midterm_243 = (\"(12.1-12.4 Chapter 6, Chapter 7, 8.1, 8.2)\", \n",
     "               20, 80,  #A \n",
     "               18, 2, 70, #B\n",
@@ -182,14 +196,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "filename_change_if_youre_testing = \"242FINALGRADES.csv\" if course==\"math242\" else \"243FINALGRADES.csv\"\n",
+    "filename_change_if_youre_testing = \"144test.csv\" # if course==\"math242\" else \"243FINALGRADES.csv\"\n",
     "\n",
     "df = pd.read_csv(filename_change_if_youre_testing)\n",
+    "\n",
+    "math144_better_cols = ['Last Name', 'First Name', 'Username', 'Student ID', 'Last Access', 'Availability', \n",
+    "               'F1', 'F2', \n",
+    "               'L1', 'L2',\n",
+    "               'D1', 'DC1', 'D2', 'D3', 'DC2', 'DC3',\n",
+    "               'DA1', 'DA2', 'DA3', 'DA4', 'DA5', 'DA6', 'DA7',\n",
+    "               'EL1', 'EL2', 'EL3', 'EL4', 'EL5',\n",
+    "               'INT1', 'INT2', 'INT3', 'INT4', 'INT5', 'INT6',        \n",
+    "               'IT1', 'IT2', 'WebAssign']\n",
     "\n",
     "math243_better_cols = ['Last Name', 'First Name', 'Username', 'Student ID', 'Last Access', 'Availability', \n",
     "               'V1', 'V2', 'V3', 'V4', 'V5',\n",
@@ -210,8 +235,7 @@
     "               'IA1', 'IA2', 'IA3', 'IA4',\n",
     "               'IF1', 'IF2', 'WebAssign']\n",
     "\n",
-    "\n",
-    "better_cols = math242_better_cols if course==\"math242\" else math243_better_cols\n",
+    "better_cols = math144_better_cols # math242_better_cols if course==\"math242\" else math243_better_cols\n",
     "\n",
     "df.columns = better_cols\n",
     "\n",
@@ -301,7 +325,9 @@
     "\n",
     "## for 243:\n",
     "#extra_text = \"The webassign grade was based on score of all assignments that were due before March 13. Work between March 14 and the present is not reflected on this report<br/><br/>\"\n",
-    "extra_text = \"Final grades after checkpoint 15 was completed.\"\n",
+    "#extra_text = \"Final grades after checkpoint 15 was completed.\"\n",
+    "\n",
+    "extra_text = \"Test run. Ignore these numbers.\"\n",
     "\n",
     "# for individual in class_scores: \n",
     "#     print_the_report_for(individual)\n",
@@ -309,9 +335,9 @@
     "midtermOrFinal = \"Final\"\n",
     "\n",
     "\n",
-    "course = \"math243\"  #math242 or math243 as a string\n",
+    "course = \"math144\"  #math242 or math243 as a string\n",
     "# I'm an idiot an still have this midterm vs final; oh well\n",
-    "threshold_table = final_242 if course==\"math242\" else final_243\n",
+    "threshold_table = midterm_144 # final_242 if course==\"math242\" else final_243\n",
     "\n",
     "\n",
     "threshold_html_table = calculus_threshold_table % threshold_table"
@@ -333,7 +359,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -347,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
